gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-app-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway  # default Istio gateway selector
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
